yaml/nginx-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
 name: nginx-deployment
spec:
  replicas: 3
  template:
    metadata:
     labels:
      app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
