yaml/rsvp-web-secret.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rsvp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rsvp
    spec:
      containers:
      - name: rsvp-app
        image: paichayon/rsvp
        ports:
        - containerPort: 5000
          name: web-port
