yaml/frontend-svc.yaml
kind: Service
apiVersion: v1
metadata:
 name: frontend-svc
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
