yaml/webserver-hostpath.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webserver-hostpath
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webserver-hostpath
    spec:
      containers:
      - name: webserver-hostpath
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hostvol
          mountPath: /usr/share/nginx/html
      volumes:
      - name: hostvol
        hostPath:
            path: /sharehtml
---
apiVersion: v1
kind: Service
metadata:
   name: web-service-hostpath
   labels:
    run: web-service-hostpath
spec:
 type: NodePort
 ports:
  - port: 80
    protocol: TCP
 selector:
  app: webserver-hostpath
