yaml/webserver-pvc-hostpath.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webserver-pvc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webserver-pvc
    spec:
      containers:
      - name: webserver-pvc
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hostvol
          mountPath: /usr/share/nginx/html
      volumes:
      - name: hostvol
        persistentVolumeClaim:
          claimName: localclaim
---
apiVersion: v1
kind: Service
metadata:
   name: web-service-pvc
   labels:
    run: web-service-pvc
spec:
 type: NodePort
 ports:
  - port: 80
    protocol: TCP
 selector:
  app: webserver-pvc
