yaml/myweb-ingress-fanout.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress-fanout
  annotations: 
     nginx.ingress.kubernetes.io/rewrite-target:  "/"
spec:
  rules:
  - host: www.myweb.com
    http:
      paths:
      - backend:
          serviceName: blue-service
          servicePort: 80
        path: /blue
      - backend:
          serviceName: green-service
          servicePort: 80
        path: /green
