yaml/switch-production-ingress-xip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: production-ingress-xip
spec:
  rules:
  - host: production.192.168.99.100.xip.io
    http:
      paths:
      - backend:
          serviceName: green-service
          servicePort: 80
